# evidence-confidence-propagation

./: README.md  gitignore  pyproject.toml
ecp/: __init__.py  ladder.py  propagator.py  residue.py  schema.py
examples/: basic_usage.py
tests/: test_ladder.py  test_propagator.py  test_residue.py  test_schema.py
